--- a/MusicDiary/app/src/main/res/layout/fragment_favourites.xml
+++ b/MusicDiary/app/src/main/res/layout/fragment_favourites.xml
@@ -7,6 +7,7 @@
     tools:context=".FavouritesFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/favourites_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
