--- a/MusicDiary/app/src/main/res/layout/activity_main.xml
+++ b/MusicDiary/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,9 @@
         app:layout_constraintBottom_toTopOf="@+id/text_view_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tab_layout" />
+        app:layout_constraintTop_toBottomOf="@+id/tab_layout" >
+
+    </androidx.viewpager2.widget.ViewPager2>
 
     <TextView
         android:id="@+id/text_view_name"
