--- a/MusicDiary/app/src/main/res/layout/album_item.xml
+++ b/MusicDiary/app/src/main/res/layout/album_item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/album_name_text_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -14,15 +14,17 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/album_image_view"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
+                android:background="@drawable/placeholder_image"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:srcCompat="@tools:sample/avatars" />
+                tools:srcCompat="@drawable/placeholder_image"
+                android:contentDescription="TODO" />
 
             <TextView
                 android:id="@+id/album"
@@ -34,23 +36,11 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:text="TextView"
+                android:textSize="18sp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/album_image_view"
                 app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/year_released_text_view"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
-                android:text="TextView"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/album_image_view"
-                app:layout_constraintTop_toBottomOf="@+id/album" />
 
             <TextView
                 android:id="@+id/genre_text_view"
@@ -59,12 +49,22 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="10dp"
+                android:text="TextView"
+                app:layout_constraintStart_toEndOf="@+id/album_image_view"
+                app:layout_constraintTop_toBottomOf="@+id/album" />
+
+            <TextView
+                android:id="@+id/year_released_text_view"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="114dp"
+                android:layout_marginLeft="114dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:text="TextView"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/album_image_view"
-                app:layout_constraintTop_toBottomOf="@+id/year_released_text_view" />
+                app:layout_constraintStart_toEndOf="@+id/genre_text_view"
+                app:layout_constraintTop_toTopOf="@+id/genre_text_view" />
 
             <TextView
                 android:id="@+id/description_text_view"
@@ -80,7 +80,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/album_image_view"
-                app:layout_constraintTop_toBottomOf="@+id/genre_text_view" />
+                app:layout_constraintTop_toBottomOf="@+id/year_released_text_view" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
