--- a/MusicDiary/app/src/main/res/layout/album_item.xml
+++ b/MusicDiary/app/src/main/res/layout/album_item.xml
@@ -2,85 +2,62 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/album_name_text_view"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:id="@+id/album_item_container"
+    android:layout_width="wrap_content"
+    android:layout_height="180dp"
+    android:layout_weight="2">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <ImageView
                 android:id="@+id/album_image_view"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:background="@drawable/placeholder_image"
+                android:contentDescription="TODO"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintDimensionRatio="H,1:1"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:srcCompat="@drawable/placeholder_image"
-                android:contentDescription="TODO" />
+                tools:srcCompat="@drawable/placeholder_image" />
+
+            <View
+                android:id="@+id/shadow_view"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:background="#97000000"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/album_image_view"
+                app:layout_constraintStart_toStartOf="@+id/album_image_view" />
 
             <TextView
                 android:id="@+id/album"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
-                android:text="TextView"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/album_image_view"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/genre_text_view"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="10dp"
-                android:text="TextView"
-                app:layout_constraintStart_toEndOf="@+id/album_image_view"
-                app:layout_constraintTop_toBottomOf="@+id/album" />
-
-            <TextView
-                android:id="@+id/year_released_text_view"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="114dp"
-                android:layout_marginLeft="114dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
-                android:text="TextView"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/genre_text_view"
-                app:layout_constraintTop_toTopOf="@+id/genre_text_view" />
-
-            <TextView
-                android:id="@+id/description_text_view"
-                android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="8dp"
+                android:gravity="center|center_horizontal|center_vertical"
                 android:text="TextView"
+                android:textColor="#FFFFFF"
+                android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/album_image_view"
-                app:layout_constraintTop_toBottomOf="@+id/year_released_text_view" />
+                app:layout_constraintEnd_toEndOf="@+id/shadow_view"
+                app:layout_constraintStart_toStartOf="@+id/shadow_view"
+                app:layout_constraintTop_toTopOf="@+id/shadow_view" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
